--- a/lectures/01_installation-and-the-Environment/session_material.ipynb
+++ b/lectures/01_installation-and-the-Environment/session_material.ipynb
@@ -62,9 +62,9 @@
    },
    "source": [
     "### Why R?\n",
-    "<img src=\"http://revolution-computing.typepad.com/.a/6a010534b1db25970b01b8d2594d25970c-pi\" width=\"600\">\n",
+    "<img src=\"https://www.researchgate.net/publication/333159083/figure/fig1/AS:759374838517760@1558060478678/Number-of-R-packages-contributed-to-the-Comprehensive-R-Archive-Network-CRAN-as-a.png\" width=\"600\">\n",
     "\n",
-    "*Source: https://blog.revolutionanalytics.com/2016/03/16-years-of-r-history.html*"
+    "*Source: [ResearchGate](https://www.researchgate.net/figure/Number-of-R-packages-contributed-to-the-Comprehensive-R-Archive-Network-CRAN-as-a_fig1_333159083)*"
    ]
   },
   {
