--- a/lectures/01_installation-and-the-Environment/session_material.ipynb
+++ b/lectures/01_installation-and-the-Environment/session_material.ipynb
@@ -53,6 +53,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5de9ebb3",
    "metadata": {
@@ -62,7 +63,7 @@
    },
    "source": [
     "### Why R?\n",
-    "<img src=\"https://www.researchgate.net/publication/333159083/figure/fig1/AS:759374838517760@1558060478678/Number-of-R-packages-contributed-to-the-Comprehensive-R-Archive-Network-CRAN-as-a.png\" width=\"600\">\n",
+    "<img src=\"img/Number-of-R-packages-contributed-to-the-Comprehensive-R-Archive-Network-CRAN-as-a.png\" width=\"600\">\n",
     "\n",
     "*Source: [ResearchGate](https://www.researchgate.net/figure/Number-of-R-packages-contributed-to-the-Comprehensive-R-Archive-Network-CRAN-as-a_fig1_333159083)*"
    ]
@@ -98,6 +99,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "db72e222",
    "metadata": {
@@ -106,7 +108,7 @@
     }
    },
    "source": [
-    "### 🕵️ RStudio High level review"
+    "### 🕵️ RStudio High-level review"
    ]
   },
   {
